@startuml
package Service {
    class UserService {
        + UserService()
        + boolean registerUser(User user)
        + boolean loginUser(String userId, String password)
        + User getUserDetails(String userId)
    }

    class ClubService {
        + ClubService()
        + boolean registerClub(Club club)
        + boolean loginClub(String clubId, String password)
        + Club getClubDetails(String clubId)
    }

    class FieldService {
        + FieldService()
        + boolean addField(Field field)
        + boolean updateField(Field field)
        + boolean deleteField(int fieldId)
        + Field getFieldDetails(int fieldId)
    }

    class ReservationService {
        + ReservationService()
        + boolean makeReservation(Reservation reservation)
        + boolean cancelReservation(int reservationId)
        + Reservation getReservationDetails(int reservationId)
    }

    class ServiceFactory {
        + UserService createUserService()
        + ClubService createClubService()
        + FieldService createFieldService()
        + ReservationService createReservationService()
    }

    class ServiceManager {
        + ServiceManager(ServiceFactory factory)
        + UserService getUserService()
        + ClubService getClubService()
        + FieldService getFieldService()
        + ReservationService getReservationService()
    }

    UserService --> User
    ClubService --> Club
    FieldService --> Field
    ReservationService --> Reservation
    ServiceManager --> ServiceFactory
}
@enduml